--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <version>0.2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>web-news-spring-angular-generator</name>
-    <description>Spring Boot Angular Starter Project</description>
+    <description>Spring Boot Angular News Generator</description>
 
     <modules>
         <module>ui</module>
@@ -34,9 +34,25 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.8.1</version>
+                    <configuration>
+                        <forceJavacCompilerUse>true</forceJavacCompilerUse>
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
+
 
 </project>
