--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 rest.api.base.path=api
 cors.allowed.origins=http://localhost:4200
 
-spring.datasource.url=jdbc:h2:file:./../../data/demo
+spring.datasource.url=jdbc:h2:./../../data/demo
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
