--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -57,8 +57,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.5.1</version>
 		</dependency>
 
 		<dependency>
