--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,12 +1,17 @@
 rest.api.base.path=api
 cors.allowed.origins=http://localhost:4200
 
-spring.datasource.url=jdbc:h2:./../../data/demo
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
+spring.datasource.url=jdbc:hsqldb:file:C:/Users/mmiho/Downloads/hsqldb-2.5.1/hsqldb/hsqldb/demodb
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
+endpoints.shutdown.enabled=true
+
+hibernate.generate_statistics=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
